--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      # <- UPDATE TO YOUR VERSION OF NODE, check with 'node --version'
+      # <- UPDATE TO YOUR VERSION OF NODE, check with 'node --version' in terminal
       - image: circleci/node:11.6.0  
 
       # Specify service dependencies here if necessary
@@ -27,7 +27,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      # CHANGED TO 'npm install'
+      # CHANGED TO 'npm install && npm install --save readline-sync'
       - run: npm install && npm install --save readline-sync
 
       - save_cache:
